--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ version '1.0-SNAPSHOT'
 
 subprojects {
     apply plugin: 'java'
+    apply from: "${rootProject.projectDir}/gradle/checkstyle.gradle"
+
     repositories {
         mavenCentral()
     }
