--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
     apply from: "${rootProject.projectDir}/gradle/checkstyle.gradle"
     apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"
+    apply from: "${rootProject.projectDir}/gradle/git-hooks.gradle"
+
 
     repositories {
         mavenCentral()
