--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -3,6 +3,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
     implementation 'org.flywaydb:flyway-core:9.2.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation 'org.springframework:spring-webflux'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'org.mock-server:mockserver-netty:5.15.0'
     testImplementation 'com.h2database:h2:2.1.214'
     testImplementation 'io.r2dbc:r2dbc-h2:0.9.1.RELEASE'
     testImplementation "org.springframework.boot:spring-boot-starter-test"
