--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     implementation project(':domain')
+    implementation project(':persistence')
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
